--- a/dfs/dfs.cabal
+++ b/dfs/dfs.cabal
@@ -13,13 +13,13 @@ executable dfs-bench
   default-language: Haskell2010
   ghc-options:      -Wall -Wincomplete-record-updates
   build-depends:
-    , base             ^>=4.13
-    , containers       >=0.6.2  && <=0.7
-    , criterion        ^>=1.5.7
-    , deepseq          ^>=1.4.4
-    , hspec            >=2.7.4  && <=2.8
-    , mtl              >=2.2.2  && <=2.3
-    , mwc-probability  ^>=2.3
-    , mwc-random       ^>=0.15
-    , primitive        >=0.7.1  && <=0.8
-    , vector           >=0.12.1 && <=0.13
+    , base
+    , containers
+    , criterion
+    , deepseq
+    , hspec
+    , mtl
+    , mwc-probability
+    , mwc-random
+    , primitive
+    , vector
