Fix broken implementation of pruneST

--- a/dfs/dfs.cabal
+++ b/dfs/dfs.cabal
@@ -17,6 +17,8 @@ executable dfs-bench
     , containers
     , criterion
     , deepseq
+    , hashable
+    , hashtables
     , hspec
     , mtl
     , mwc-probability
